# Finpipe

./: .gitignore  README.md  main.py  pyproject.toml
assets/docs/: ARCHITECTURE.md  PROVIDERS.md  rules.md
docs/: ARCHITECTURE.md
finpipe/: __init__.py
finpipe/core/: __init__.py
finpipe/displays/: __init__.py  edgar.py
finpipe/fundamentals/: __init__.py  _show_util.py  analyst.py  dividends_splits.py  earnings.py  esg.py  filings.py  financial_statements.py  insider.py  institutional.py  profile.py  short_interest.py  show.py  valuation_ratios.py
finpipe/fundamentals/financials/: __init__.py  balance.py  cashflow.py  comprehensive.py  equity.py  income.py  show.py
finpipe/providers/: __init__.py  sec_edgar_adapter.py
finpipe/technicals/: __init__.py
