[project]
name = "finpipe"
version = "0.1.0"
description = "Financial python data pipeline with automatic provider fallback"
authors = [{ name = "Your Name", email = "mwkospanagiotis@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "build>=1.4.2",
    "edgartools>=5.28.3",
    "rich>=13.0",
    "twine>=6.2.0",
]


[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "finpipe"
module-root = ""


